# AdventofCode

./: .gitignore  README.md  build_extensions.py  main.py  meson.build  pyproject.toml
.github/: pull_request_advent2023.yml
.github/workflows/: pull_request_advent2023.yml
Advent2022/: .gitignore  requirement.txt
Advent2022/Tests/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
Advent2022/functions/: Classes_day10.py  Tree.py  class_12.py  classes_day11.py  day9_classes.py
Advent2023/: .gitignore  README.md  main.py  meson.build  pyproject.toml
Advent2023/advent/: ProblemData.py  __init__.py  _advent.pyi  read.py
Advent2023/advent copy/cpp/day1/: bindings.cpp  day1.cpp
Advent2023/advent copy/day1/: __init__.py
Advent2023/advent/cpp/: ProblemData.cpp  ProblemData.h  bindings.cpp
Advent2023/advent/cpp/day1/: bindings.cpp  day1.cpp  day1.h
Advent2023/advent/cpp/day2/: bindings.cpp  day2.cpp  day2.h
Advent2023/advent/day1/: __init__.py  _day1.pyi
Advent2023/advent/day2/: __init__.py  _day2.py
Advent2023/test/: test_day1.py  test_day2.py
