[tool.poetry]
name = "c++python template"
version = "0.1.0"
description = "Template for starting C++ and Python projectys"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
include = [
    { path = "LICENSE.md" },
    { path = "meson.build", format = "sdist" },
    { path = "meson_options.txt", format = "sdist" },
    { path = "build_extensions.py", format = "sdist" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas2 = "^0.0.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build_extensions.py"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = ">=6.0.0"
pytest-cov = ">=2.6.1"
codecov = "*"

# These are used in the build script: for compiling the library (meson, ninja)
# and for generating doc or type stubs (docblock, mypy).
meson = "^1.0.0"
ninja = "^1.11.1"
mypy = "^0.991"
docblock = "^0.0.5"

[build-system]
# We need meson and ninja to build the C++ extensions, and docblock to extract
# documentation for the extensions.
requires = ["poetry", "meson", "ninja", "docblock"]
build-backend = "poetry.core.masonry.api"