[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["SemUijen <grootveer.sem@outlook.com>"]
readme = "README.md"
include = [
    { path = "meson.build", format = "sdist" },
    { path = "build_extensions.py", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"

[tool.poetry.group.dev.dependencies]
# These are used in the build script: for compiling the library (meson, ninja)
meson = "^1.0.0"
ninja = "^1.11.1"


[build-system]
requires = ["poetry-core", "meson"]
build-backend = "poetry.core.masonry.api"
